gccida/c3/init_file_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_file_table/src/dwarf2out.c:12285:1: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.table = ( char **)xcalloc( 0x40uLL, 8uLL); 
^~~~~~~~~~~~
file_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_file_table/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_file_table/src/dwarf2out.c:12286:1: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.allocated = 64; 
^~~~~~~~~~~~
file_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_file_table/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_file_table/src/dwarf2out.c:12287:1: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.in_use = 1; 
^~~~~~~~~~~~
file_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_file_table/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_file_table/src/dwarf2out.c:12288:1: error: use of undeclared identifier 'file_table_0'; did you mean 'file_table'?
file_table_0.last_lookup_index = 0; 
^~~~~~~~~~~~
file_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_file_table/src/dwarf2out.c:3310:26: note: 'file_table' declared here
static struct file_table file_table;
                         ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_file_table/src/obj/dwarf2out.o] Error 1
